fixed the video shifting bug

--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -128,3 +128,7 @@ body{
 .text hr{
   color: #fff;
 }
+
+.text a:hover{
+  text-decoration: none;
+}
